Refactor media processor
